2005-02-21  Marek Safar  <marek.safar@seznam.cz>

	* ecore.cs (PropertyExpr.DoResolve): Add error 214 report.
	
	* class.cs (Operator.Define): Add error 217 report.
	
2005-02-21  Raja R Harinath  <rharinath@novell.com>

	Fix #68955.
	* expression.cs (Invocation.IsApplicable): Make public.
	(Invocation.IsParamsMethodApplicable): Likewise.
	* delegate.cs (Delegate.VerifyApplicability): Don't use
	Invocation.VerifyArgumentCompat for parameter applicability
	testing.  Use Invocation.IsApplicable and
	Invocation.IsParamsMethodApplicable.

2005-02-21  Marek Safar  <marek.safar@seznam.cz>

	* ecore.cs (PropertyExpr.DoResolve): Add error 214 report.
	
	* class.cs (Operator.Define): Add error 217 report.
	
2005-02-21  Raja R Harinath  <rharinath@novell.com>

	* namespace.cs (UsingEntry.Resolve): Undo change below.

2005-02-21  Raja R Harinath  <rharinath@novell.com>

	Fix #72756.
	* ecore.cs (Expression.MemberLookupFailed): Add argument to
	disable the error message when the extended MemberLookup also
	fails.
	(Expression.MemberLookupFinal): Update.
	(SimpleName.DoSimpleNameResolve): Update.
	* expression.cs (MemberAccess.ResolveNamespaceOrType):
	Don't use MemberLookupFinal.
	(New.DoResolve): Update.
	(BaseAccess.CommonResolve): Update.

2005-02-21  Raja R Harinath  <rharinath@novell.com>

	Fix #72732.
	* attribute.cs (Attribute.ResolveType): If a 'resolve_error' had
	occured previously, don't resolve again.

2005-02-21  Marek Safar  <marek.safar@seznam.cz>

	Fix #69949
	* attribute.cs (Attribute.GetAttributeUsage): Add EmitContext
	argument. Call ResolveAttributeUsage for unresolved.
	when types doesn't match ctor arguments.
	
	* class.cs (DoDefineMembers.TypeContainer): Removed safety check
	for nested attribute classes.
	(Class.attribute_usage): Removed.
	(Class.ResolveAttributeUsage): Resolves AttributeUsageAttribute
	for attribute class.
	
	* ecore.cs (IsAttribute): Removed.
	
	* namespace.cs (UsingEntry.Resolve): Don't destroy NamespaceEntry.
	